--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,9 @@
   "version" : "1.0",
 
   "background": {
-//    "scripts" : [ "background.js" ],
     "page" : "hello.html"
   },
-  "options_page" : "foo.html",
+  "options_page" : "options.html",
 
   "permissions" : [
     "https://www.googleapis.com/",
