--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
   "options_page" : "options.html",
 
   "permissions" : [
+    "tabs",
     "https://www.googleapis.com/",
     "https://apis.google.com/"
   ],
